  release. (Jonathan Lange)

* ``testr load`` now loads all input streams in parallel. This has no impact
  on the CLI as yet, but permits API users to load from parallel processes.
  (Robert Collins)

* ``testr list-tests`` is a new command that will list the tests for a project
  when ``.testr.conf`` has been configured with a ``test_list_option``.
  (Robert Collins)

* ``testr run`` now resets the SIGPIPE handler to default - which is what
  most Unix processes expect. (Robert Collins)

* ``testr run`` now uses a unique file name rather than hard coding
  failing.list - while not as clear, this permits concurrent testr invocations,
  or parallel testing from within testr, to execute safely. (Robert Collins)

* ``testr run`` uses an in-process load rather than reinvoking testr. This
  should be faster on Windows and avoids the issue with running the wrong
  testr when PYTHONPATH but not PATH is set. (Robert Collins, #613129)

* ``testr run`` will now pass -d to the ``testr load`` invocation, so that
  running ``testr run -d /some/path`` will work correctly.
  (Robert Collins, #529698)

* ``testr run`` will now pass ``-q`` down to ``testr load``.
  (Robert Collins, #529701)

* Updates to next-stream are done via a temporary file to reduce the chance
  of an empty next-stream being written to disk. (Robert Collins, #531664)

* When next-stream is damaged testr will report that it is corrupt rather than
  reporting an invalid literal. (Robert Collins, #531663)

0.0.4
+++++

IMPROVEMENTS
------------

* ``failing`` now supports ``--list`` to list the failing tests.
  (Jonathan Lange)

* Repository not found errors are now clearer. (Jonathan Lange, #530010)

* The summary of a test run is now formatted as foo=NN rather than foo: NN,
  which some folk find easier to read.

* The file implementation of Repository.open now performs ~ expansion.
  (Jonathan Lange, #529665)

* Test failures and errors are now shown as we get them in 'load',