@@ -1,3 +1,4 @@
 [DEFAULT]
-test_command=python -m subunit.run $IDOPTION testrepository.tests.test_suite
+test_command=python -m subunit.run $LISTOPT $IDOPTION testrepository.tests.test_suite
 test_id_option=--load-list $IDFILE
+test_list_option=--list
